--- a/pytest.ini
+++ b/pytest.ini
@@ -3,10 +3,14 @@ DJANGO_SETTINGS_MODULE = mall_server.settings.test
 python_files = tests.py test_*.py *_tests.py
 python_classes = Test*
 python_functions = test_*
-addopts = --tb=short --strict-markers --disable-warnings
+addopts = --tb=short --strict-markers --disable-warnings --reuse-db --nomigrations
 testpaths = tests
 markers =
     slow: marks tests as slow (deselect with '-m "not slow"')
     integration: marks tests as integration tests
     unit: marks tests as unit tests
     property: marks tests as property-based tests
+    django_db: mark test to use django database
+filterwarnings =
+    ignore::django.utils.deprecation.RemovedInDjango50Warning
+    ignore::DeprecationWarning
