delete(env): remove development environment files and update settings references
- Deleted .env.development and .env.development.example files to streamline environment configuration.
- Updated references in various files to use a unified settings module instead of the development-specific one.
- Removed obsolete scripts and configurations related to the development environment, enhancing codebase clarity and maintainability.

--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -35,4 +35,4 @@ RUN chmod +x /app/scripts/setup_dev_db.py
 EXPOSE 8000
 
 # Development command
-CMD ["python", "manage.py", "runserver", "0.0.0.0:8000", "--settings=mall_server.settings.development"]
+CMD ["python", "manage.py", "runserver", "0.0.0.0:8000"]
