--- a/pytest.ini
+++ b/pytest.ini
@@ -1,5 +1,6 @@
 [tool:pytest]
-DJANGO_SETTINGS_MODULE = mall_server.settings.test
+DJANGO_SETTINGS_MODULE = mall_server.settings
+env = ENVIRONMENT=test
 python_files = tests.py test_*.py *_tests.py
 python_classes = Test*
 python_functions = test_*
