feat(env, admin, serializers): enhance product image handling and backend URL configuration
- Added BACKEND_URL to settings for building absolute URLs in the application.
- Updated ProductImage model to support image uploads and auto-generate image URLs.
- Enhanced ProductImageInline in the admin interface to display image previews using the new backend URL.
- Adjusted serializers to return full URLs for images, ensuring compatibility with frontend requirements.
- Refactored product-related views to utilize the new ID-based routing instead of gid.

--- a/env.example
+++ b/env.example
@@ -123,3 +123,6 @@ BCRYPT_ROUNDS=12
 LANGUAGE_CODE=zh-hans
 TIME_ZONE=Asia/Shanghai
 
+# Backend URL (for building absolute URLs)
+BACKEND_URL=http://localhost:8000
+
