Refactor code structure for improved readability and maintainability

--- a/env.example
+++ b/env.example
@@ -91,14 +91,34 @@ JWT_ACCESS_TOKEN_LIFETIME_DAYS=7
 JWT_REFRESH_TOKEN_LIFETIME_DAYS=30
 
 # WeChat Configuration
+# WeChat Mini Program App ID
 WECHAT_APPID=
+# WeChat Mini Program App Secret
 WECHAT_APPSECRET=
+# WeChat Pay Merchant ID (商户号)
 WECHAT_MCHID=
+# WeChat Pay Merchant ID (alias, same as WECHAT_MCHID)
 WECHAT_MCH_ID=
-WECHAT_API_KEY=
+# WeChat Pay Notify URL (支付回调地址，必须是公网可访问的URL)
+# Example: https://yourdomain.com/api/order/callback
 WECHAT_NOTIFY_URL=http://localhost:8000/api/order/callback
-WECHAT_CERT_PATH=
+# WeChat Pay Private Key Path (RSA私钥文件路径，用于JSAPI支付签名)
+# Example: /path/to/apiclient_key.pem
+# 注意：此文件需要从微信支付商户平台下载
 WECHAT_KEY_PATH=
+# WeChat Pay V3 API Configuration
+# Certificate Serial Number (证书序列号，从证书文件中获取)
+# 获取方法：
+#   1. 使用脚本：python scripts/get_cert_serial.py <cert_file_path>
+#   2. 使用命令：openssl x509 -in apiclient_cert.pem -noout -serial
+#   3. 从微信支付商户平台查看：账户中心 -> API安全 -> API证书
+WECHAT_CERT_SERIAL_NO=
+# API v3 Key (API v3密钥，在商户平台设置)
+# 路径：账户中心 -> API安全 -> API密钥 -> 设置APIv3密钥
+WECHAT_APIV3_KEY=
+# Certificate Cache Directory (平台证书缓存目录，首次使用确保为空目录)
+# Example: ./cert or /path/to/cert
+WECHAT_CERT_DIR=
 
 # Email Configuration
 EMAIL_BACKEND=django.core.mail.backends.console.EmailBackend
