--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,8 @@ cryptography==41.0.7
 pycryptodome==3.19.0
 Pillow==10.4.0
 python-decouple==3.8
-requests==2.31.0
+requests==2.32.5
+certifi>=2026.1.4
 pytest==7.4.4
 pytest-django==4.8.0
 factory-boy==3.3.1
