Update environment configuration and requirements for Django compatibility
- Downgraded Django version to 3.2.25 in requirements.txt for compatibility with existing codebase.
- Commented out DB_CONN_HEALTH_CHECKS in env.example and settings.py, noting its unavailability in Django 3.2.
- Adjusted related database connection settings to ensure proper functionality with the downgraded version.

--- a/env.example
+++ b/env.example
@@ -19,7 +19,8 @@ MYSQL_PASSWORD=your-password
 MYSQL_HOST=localhost
 MYSQL_PORT=3306
 DB_CONN_MAX_AGE=60
-DB_CONN_HEALTH_CHECKS=True
+# DB_CONN_HEALTH_CHECKS is only available in Django 4.1+, not supported in Django 3.2
+# DB_CONN_HEALTH_CHECKS=True
 
 # SQLite Configuration (when DB_ENGINE=sqlite3)
 DB_NAME=:memory:
