Enhance WeChatAPI and entrypoint.sh for improved SSL handling and configuration
- Updated entrypoint.sh to upgrade certifi and system CA certificates for better SSL support.
- Modified WeChatAPI to allow flexible SSL verification settings via WECHAT_VERIFY_SSL environment variable, with warnings for insecure configurations.
- Enhanced error handling for SSL verification failures, providing clearer guidance for potential issues.

--- a/env.example
+++ b/env.example
@@ -104,6 +104,11 @@ JWT_ACCESS_TOKEN_EXPIRE_MINUTES=1440
 WECHAT_APPID=
 # WeChat Mini Program App Secret
 WECHAT_APPSECRET=
+# WeChat SSL Verification
+# Set to 'false' to disable SSL verification (insecure, only for production SSL issues)
+# Set to 'true' or leave empty to use certifi (default, secure)
+# Set to a file path to use custom CA bundle
+WECHAT_VERIFY_SSL=true
 # WeChat Pay Merchant ID (商户号)
 WECHAT_MCHID=
 # WeChat Pay Merchant ID (alias, same as WECHAT_MCHID)
