chore: Add blank lines to various files for improved readability
- Add trailing blank lines to common app serializers and validators
- Add trailing blank lines to membership app serializers
- Add trailing blank lines to orders app models and serializers
- Add trailing blank lines to payments app models and serializers
- Add trailing blank lines to points app models, serializers, and services
- Add trailing blank lines to products app models and serializers
- Add trailing blank lines to users app models
- Add trailing blank lines to management commands and utility scripts
- Add trailing blank lines to settings, URLs, and test files
- Improve code formatting consistency across the project

--- a/requirements.txt
+++ b/requirements.txt
@@ -22,3 +22,5 @@ django-security==0.12.0
 django-csp==3.7
 # WeChat Pay V3 SDK
 wechatpayv3>=2.0.1
+# OpenAPI documentation
+drf-spectacular>=0.27.0
